<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_14sdp">
    <TextView
        android:id="@+id/txtproName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/product_name"
        android:paddingEnd="@dimen/_14sdp"
        android:textColor="@color/primary_text"
        android:gravity="bottom"
        android:textSize="@dimen/_10ssp" />
    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/price"
        android:textColor="@color/primary_text"
        android:gravity="bottom"
        android:textSize="@dimen/_10ssp" />
    <TextView
        android:id="@+id/txtQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/quantity"
        android:textColor="@color/primary_text"
        android:gravity="bottom|center"
        android:textSize="@dimen/_10ssp" />
    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="Total Price "
        android:textColor="@color/primary_text"
        android:gravity="bottom"
        android:textSize="@dimen/_10ssp" />
</LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>