<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/button"
    tools:context=".control.SearchActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageSignOut"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_content_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageSignOut"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txtproductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/product_name"
            android:textColor="@color/green"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="left"
                android:layout_weight="3"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:text="@string/position"
                android:textColor="@color/green"
                android:textSize="@dimen/_13ssp" />
            <TextView
                android:id="@+id/txtPosition"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="6"
                android:background="@drawable/background_input"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:text="@string/position"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="left"
                android:layout_weight="3"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:text="@string/size"
                android:textColor="@color/green"
                android:textSize="@dimen/_13ssp" />

            <Spinner
                android:id="@+id/spnSize"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="6"
                android:background="@drawable/background_input"
                android:contentDescription="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="left"
                android:layout_weight="3"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:text="@string/quantity"
                android:textColor="@color/green"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="6"
                android:background="@drawable/background_input"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:text="@string/quantity"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="left"
                android:layout_weight="3"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:text="@string/price"
                android:textColor="@color/green"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="6"
                android:background="@drawable/background_input"
                android:gravity="left|center"
                android:paddingStart="@dimen/_14sdp"
                android:text="@string/price"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnScanAgain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_20sdp"
            android:backgroundTint="@color/button"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>