<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/button"
    tools:context=".control.MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>
    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/imageSignOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageSignOut">
        <FrameLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_150sdp"
           android:layout_marginTop="@dimen/_90sdp"
            android:layout_marginLeft="@dimen/_35sdp">


            <ImageView
                android:id="@+id/searchView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_image_search_24" />

            <TextView
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_120sdp"
                android:text="@string/search"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:layout_marginLeft="@dimen/_170sdp"
            android:layout_marginBottom="@dimen/_65sdp">

            <ImageView
                android:id="@+id/paymentView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_receipt_24" />

            <TextView
                android:id="@+id/paymentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_120sdp"
                android:text="@string/payment"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_65sdp">

            <ImageView
                android:id="@+id/viewOrderHistory"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_history_24" />

            <TextView
                android:id="@+id/orderHistoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_120sdp"
                android:text="@string/history"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                />
        </FrameLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>