<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="3">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="7"
            android:layout_marginEnd="@dimen/_5sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="9"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtproName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:text="@string/product_name"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="10"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="8">
                            <Button
                                android:id="@+id/btnMinus"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                               android:text="ꟷ"
                                android:textSize="@dimen/_7ssp"
                                android:backgroundTint="@color/button"
                                />
                            <EditText
                                android:id="@+id/edtQuantity"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:hint="1"
                                android:gravity="center"
                                android:textSize="@dimen/_8ssp"/>
                            <Button
                                android:id="@+id/btnAdd"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:text="+"
                                android:textSize="@dimen/_7ssp"
                                android:backgroundTint="@color/button" />
                        </LinearLayout>
                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="match_parent"
                           android:layout_weight="2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:layout_gravity="center"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_9sdp"/>
                        <TextView
                            android:id="@+id/txtTotalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100.000đ"
                            android:layout_gravity="center"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_9sdp"
                            android:padding="@dimen/_1sdp"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/txtproPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/price"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:gravity="bottom"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>